<resources>
    <string name="app_name">PawCare</string>
    <string name="action_settings">Settings</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="see_all">Lihat Semua</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="field_email">Email</string>
    <string name="field_password">Password</string>
    <string name="field_input_email">Masukkan Email</string>
    <string name="field_input_password">Masukkan Password</string>
    <string name="login">Masuk</string>
    <string name="login_with_google">Masuk dengan Google</string>
    <string name="forgot_password">Lupa Password?</string>
    <string name="to_register">Belum punya akun? Daftar <u>disini</u>.</string>
    <string name="to_login">Sudah punya akun? Login <u>disini</u>.</string>
    <string name="back_to_login">Kembali ke Login <u>disini</u>.</string>
    <string name="main_name_greeting">Hi!</string>
    <string name="main_greeting">Selamat datang di PawCare!</string>
    <string name="main_consultation">Ayo mulai berkonsultasi!</string>
    <string name="home_event">Event dari kami</string>
    <string name="home">Beranda</string>
    <string name="cd_home">Beranda</string>
    <string name="consultation">Konsultasi</string>
    <string name="cd_consultation">Konsultasi</string>
    <string name="notification">Notifikasi</string>
    <string name="cd_notification">Notifikasi</string>
    <string name="profile">Profile</string>
    <string name="cd_profile">Profile</string>
    <string name="consultation_search_hint">Cari Klinik, Dokter, Puskeswan</string>
    <string name="consultation_history">Riwayat Konsultasi</string>
    <string name="consultation_description">Deskripsi</string>
    <string name="field_bank">Nama Bank</string>
    <string name="field_input_bank">Masukkan Nama Bank</string>
    <string name="field_payment_name">Nama Pengirim</string>
    <string name="field_input_payment_name">Masukkan Nama Pengirim</string>
    <string name="submit">Kirim</string>
    <string name="field_name">Nama Lengkap</string>
    <string name="field_input_name">Masukkan Nama Lengkap</string>
    <string name="field_gender">Jenis Kelamin</string>
    <string name="gender_boy">Laki-Laki</string>
    <string name="gender_girl">Perempuan</string>
    <string name="field_address">Alamat</string>
    <string name="field_input_address">Masukkan Alamat</string>
    <string name="field_phone">No Telepon</string>
    <string name="field_confirm_password">Konfirmasi Password</string>
    <string name="field_input_confirm_password">Masukkan Konfirmasi Password</string>
    <string name="register">Daftar</string>
    <string name="forgot_password_title">Lupa Kata Sandimu?</string>
    <string name="forgot_password_desc">Tidak perlu khawatir, Kamu  bisa memasukkan emailmu yang digunakan saat register disini.</string>
    <string name="summary_desc">Sebelum melakukan konsultasi, mohon lakukan transfer pada rekening berikut sebelum waktu yang sudah tertera di atas. Bila sudah, mohon untuk mengupload bukti pembayarannya.</string>
    <string name="copy">Salin</string>
    <string name="upload_payment">Upload Bukti Pembayaran</string>
    <string name="bca">BCA</string>
    <string name="pawcare_name">A. N PawCare</string>
    <string name="total_payment">Total Pembayaran</string>
    <string name="consultation_confirmation_title">Lakukan konsultasi sekarang?</string>
    <string name="later">Nanti</string>
    <string name="label_clinic_detail">Detail Klinik</string>
    <string name="label_payment">Pembayaran</string>
    <string name="label_upload_payment">Upload Bukti Pembayaran</string>
    <string name="success_clip">%s Berhasil di salin</string>
    <string name="on_time_digit">0%s</string>
    <string name="zero_timer">00</string>
    <string name="upload_image">Upload Image</string>
    <string name="upload_image_desc">High resolution image file (.jpg or .png). Maximum file size 2MB.</string>
    <string name="divider">|</string>
    <string name="error_consultation">Maaf gagal membuat jadwal konsultasi, silahkan coba lagi</string>
    <string name="add_media_take_photo">Ambil Foto</string>
    <string name="add_media_take_from_gallery">Ambil dari Galeri</string>
    <string name="success_upload">Berhasil Mengunggah</string>
    <string name="failed_upload">Gagal Mengunggah</string>
    <string name="success_review">Berhasil Mengirim Ulasan</string>
    <string name="failed_review">Gagal Mengirim Ulasan</string>
    <string name="success_register">Berhasil Mendaftar, silahkan lakukan login</string>
    <string name="failed_register">Gagal Mendaftar</string>
    <string name="success_forgot_password">Berhasil mengirimkan ke email Anda, silahkan cek Email.</string>
    <string name="failed_forgot_password">Gagal mengirimkan email.</string>
    <string name="success_user_edit">Berhasil mengubah profil.</string>
    <string name="failed_user_edit">Gagal mengubah profil.</string>
    <string name="success_user_image">Berhasil mengubah foto profil.</string>
    <string name="failed_user_image">Gagal mengubah foto profil.</string>
    <string name="success_user_banner">Berhasil mengubah foto banner.</string>
    <string name="failed_user_banner">Gagal mengubah foto banner.</string>
    <string name="success_change_password">Berhasil mengubah password.</string>
    <string name="failed_change_password">Gagal mengubah password.</string>
    <string name="history_detail_consultation">Rincian Konsultasi</string>
    <string name="history_date_consultation">Tanggal Konsultasi</string>
    <string name="history_date_payment">Tanggal Pembayaran</string>
    <string name="history_date_payment_confirm">Tanggal Dikonfirmasi</string>
    <string name="history_date_payment_deny">Tanggal Ditolak</string>
    <string name="history_payment_method">Metode Pembayaran</string>
    <string name="history_price">Harga</string>
    <string name="history_discount">Potongan Harga</string>
    <string name="history_waiting_payment">Belum Bayar</string>
    <string name="history_in_session">Dalam Sesi</string>
    <string name="history_give_rating">Beri Ulasan</string>
    <string name="history_consultation">Riwayat Konsultasi</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="change_password">Ubah Password</string>
    <string name="log_out">Keluar</string>
    <string name="label_history_consultation">Riwayat Konsultasi</string>
    <string name="label_profile">Profil</string>
    <string name="label_history_consultation_detail">Detail Riwayat Konsultasi</string>
    <string name="label_notification">Notifikasi</string>

    <string name="waiting_payment">Menunggu Pembayaran</string>
    <string name="waiting_payment_desc">Mohon lakukan pembayaran sebelum %s.</string>
    <string name="waiting_payment_confirm">Menunggu Konfirmasi Pembayaran</string>
    <string name="waiting_payment_confirm_desc">Pembayaran Anda sedang dalam pengecekan, Mohon ditunggu.</string>
    <string name="payment_deny">Pembayaran Ditolak</string>
    <string name="payment_deny_desc">Maaf, pembayaran Anda ditolak, anda dapat mengirim ulang bukti pembayaran.</string>
    <string name="consultation_session">Sesi Konsultasi</string>
    <string name="consultation_session_desc">Silahkan mulai sesi konsultasi dengan menekan tombol “Mulai Sesi”.</string>
    <string name="done">Selesai</string>
    <string name="done_desc">Konsultasi berakhir, Anda dapat memberikan ulasan terima kasih.</string>
    <string name="done_review_desc">Konsultasi berakhir, terima kasih.</string>
    <string name="cancelled">Dibatalkan</string>
    <string name="cancelled_desc">Pengajuan konsultasi Anda dibatalkan.</string>
    <string name="ask_admin">Tanya Admin</string>
    <string name="start_session">Mulai Sesi</string>
    <string name="give_review">Beri Ulasan</string>
    <string name="consultation_again">Konsultasi Lagi</string>
    <string name="give_rating">Beri Penilaian</string>
    <string name="field_review_description">Deskripsi Ulasan</string>
    <string name="field_input_review_description">Masukkan Deskripsi Ulasan</string>
    <string name="warning_star">Mohon untuk memberi bintang</string>
    <string name="warning_review">Mohon untuk mengisi ulasan</string>
    <string name="label_write_review">Tulis Ulasan</string>
    <string name="error_name">Mohon masukkan nama</string>
    <string name="error_email">Mohon masukkan email</string>
    <string name="error_phone">Mohon masukkan no telepon</string>
    <string name="error_address">Mohon masukkan alamat</string>
    <string name="error_password">Mohon masukkan password</string>
    <string name="error_confirm_password">Mohon masukkan konfirmasi password</string>
    <string name="error_minimal_two">Masukkan minimal 2 karakter</string>
    <string name="error_minimal_eight">Masukkan minimal 8 karakter</string>
    <string name="error_password_not_match">Password tidak sama</string>
    <string name="error_gender">Mohon pilih jenis kelamin</string>
    <string name="error_bank">Mohon masukkan nama bank</string>
    <string name="error_bank_name">Mohon masukkan nama pengirim</string>
    <string name="error_login">Email atau Password Anda Salah</string>
    <string name="label_profile_edit">Edit Profil</string>
    <string name="rating_and_review"><![CDATA[Rating & Review]]></string>
    <string name="field_old_password">Password Lama</string>
    <string name="field_input_old_password">Masukkan Password Lama</string>
    <string name="field_new_password">Password Baru</string>
    <string name="field_input_new_password">Masukkan Password Baru</string>
    <string name="error_old_password">Mohon masukkan password lama</string>
    <string name="error_new_password">Mohon masukkan password baru</string>
    <string name="label_change_password">Ubah Password</string>
    <string name="not_found">Data Tidak Ditemukan</string>
    <string name="coming_soon">Fitur sedang dalam pengembangan.</string>
    <string name="label_event_banner">Event Dari Kami</string>
    <string name="logout_confirmation_title">Anda yakin untuk keluar?</string>
    <string name="cancel">Batal</string>
    <string name="error_image">Mohon masukkan foto</string>
    <string name="main_exit_app">Tekan satu kali lagi untuk keluar</string>
    <string name="review_desc_max">0/500</string>
    <string name="bank_account_number">Nomor Rekening</string>

</resources>