<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <androidx.appcompat.widget.AppCompatImageView
            android:id="@+id/ivForgotPassword"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/large_margin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_forgot_password" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="@dimen/zero_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:gravity="center"
            android:text="@string/forgot_password_title"
            android:textAppearance="@style/TextAppearance.Roboto.Bold.Caption"
            android:textColor="@color/mona_lisa"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/ivForgotPassword" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvForgotPasswordDesc"
            android:layout_width="@dimen/zero_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/huge_margin"
            android:layout_marginTop="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/huge_margin"
            android:gravity="center"
            android:text="@string/forgot_password_desc"
            android:textAppearance="@style/TextAppearance.Roboto.Regular.Caption"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPassword" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvEmail"
            android:layout_width="@dimen/zero_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:text="@string/field_email"
            android:textAppearance="@style/TextAppearance.Roboto.Medium.Body2"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvForgotPasswordDesc" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/boxEmail"
            style="@style/TextInputLayout.Login.Form.Outlined.Dense"
            android:layout_width="@dimen/zero_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/normal_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:layout_marginBottom="@dimen/screen_margin"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="@dimen/_8sdp"
            app:boxCornerRadiusBottomStart="@dimen/_8sdp"
            app:boxCornerRadiusTopEnd="@dimen/_8sdp"
            app:boxCornerRadiusTopStart="@dimen/_8sdp"
            app:boxStrokeColor="@drawable/bg_text_input_layout"
            app:boxStrokeWidth="@dimen/_1sdp"
            app:boxStrokeWidthFocused="1dp"
            app:endIconTint="@color/alto"
            app:expandedHintEnabled="false"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tvEmail"
            app:placeholderText="@string/field_input_email"
            app:placeholderTextAppearance="@style/TextAppearance.Roboto.Regular.Body2"
            app:placeholderTextColor="@color/alto">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:imeOptions="actionNext"
                android:inputType="textEmailAddress"
                android:maxLength="255"
                android:maxLines="1"
                android:textAppearance="@style/TextAppearance.Roboto.Regular.Caption" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnSubmit"
            style="@style/Widget.MaterialComponents.Button.UnelevatedButton"
            android:layout_width="@dimen/zero_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/large_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:backgroundTint="@color/mona_lisa"
            android:insetTop="@dimen/zero_margin"
            android:insetBottom="@dimen/zero_margin"
            android:padding="@dimen/medium_margin"
            android:text="@string/submit"
            android:textAllCaps="true"
            android:textAppearance="@style/TextAppearance.Roboto.Bold.Caption"
            android:textColor="@color/white"
            app:cornerRadius="@dimen/_4sdp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/boxEmail" />

        <com.google.android.material.textview.MaterialTextView
            android:id="@+id/tvLogin"
            android:layout_width="@dimen/zero_margin"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/screen_margin"
            android:layout_marginTop="@dimen/screen_margin"
            android:layout_marginEnd="@dimen/screen_margin"
            android:gravity="center"
            android:text="@string/back_to_login"
            android:textAppearance="@style/TextAppearance.Roboto.Regular.Caption"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/btnSubmit" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.core.widget.NestedScrollView>